[gd_scene load_steps=3 format=3 uid="uid://cakaeaw1gr5mb"]

[ext_resource type="Script" path="res://scripts/save_menu.gd" id="1_g80vy"]
[ext_resource type="Texture2D" uid="uid://ct4oa8cwk2yjq" path="res://assets/save_menu_icon.png" id="2_thn2y"]

[node name="MenuCanvas" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_g80vy")

[node name="MenuPopup" type="Popup" parent="."]
auto_translate_mode = 1
initial_position = 1
size = Vector2i(328, 282)
visible = true

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPopup"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -90.0
offset_right = 100.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="SaveSelector" type="OptionButton" parent="MenuPopup/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="NewGameButton" type="Button" parent="MenuPopup/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "New Game"

[node name="SaveButton" type="Button" parent="MenuPopup/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button" parent="MenuPopup/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Load"

[node name="SaveMenuButton" type="Button" parent="."]
offset_left = 555.0
offset_top = 79.0
offset_right = 1075.0
offset_bottom = 599.0
scale = Vector2(0.161803, 0.161803)
icon = ExtResource("2_thn2y")
flat = true

[connection signal="button_down" from="SaveMenuButton" to="." method="_on_save_menu_button_button_down"]
